--- a/index.html
+++ b/index.html
@@ -11,31 +11,32 @@
 
     </head>
     <body>
-
+<div class="row">
+	<div class="large-12 columns">
         <div class="site">
           <div class="header">
             <h1 class="title"><a href="/">Tom Standifer's Blog</a></h1>
             <a class="extra" href="/">home</a>
           </div>
 
-          <p>This is going to me the homepage of mt blog.</p>
+          <p>This is going to me the homepage of my blog.</p>
 
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
+                Tom Standifer<br />
+                Political Hack<br />
+                tjstandifer@gmail.com
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="https://github.com/yourusername">github.com/tomtommyboy</a><br />
               </p>
             </div>
           </div>
         </div>
-
+	</div>
+</div>
     </body>
 </html>
