--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a class="extra" href="/">home</a>
           </div>
 
-          <p>This is going to me the homepage of my blog.</p>
+          <p>This is going to be the homepage of my blog.</p>
 
           <div class="footer">
             <div class="contact">
