--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <nav class="top-bar" data-topbar>
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#">Tom Standifer's Blog</a></h1>
+      <h1><a href="#">Blogging life.</a></h1>
     </li>
      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -43,7 +43,7 @@
  
  <div class="row">
  	<div class="large-12 columns">
- 		<h1><small>About.</small></h1>
+ 		<h1><small>“I think the idea is that every person has to live for his or her own life and then make the choice to share it with other people. You can't just sit there and put everybody's lives ahead of yours and think that counts as love.” </small></h1>
  	</div>
  </div>
  
