--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
  		<h1><small>“I think the idea is that every person has to live for his or her own life and then make the choice to share it with other people. You can't just sit there and put everybody's lives ahead of yours and think that counts as love.” </small></h1>
  	</div>
  </div>
- 
+<hr>
   <div class="row">
  
     <!-- Main Blog Content -->
-    <div class="large-9 columns" role="content">
+    <div class="large-9 large-centered columns" role="content">
  
       <article>
 	  
@@ -62,37 +62,9 @@
       </article>
  
     </div>
- 
+ </div>
     <!-- End Main Content -->
- 
- 
-    <!-- Sidebar -->
- 
-    <aside class="large-3 columns">
- 
-      <h5>Categories</h5>
-      <ul class="side-nav">
-        <li><a href="#">News</a></li>
-        <li><a href="#">Code</a></li>
-        <li><a href="#">Design</a></li>
-        <li><a href="#">Fun</a></li>
-        <li><a href="#">Weasels</a></li>
-      </ul>
- 
-      <div class="panel">
-        <h5>Contact information</h5>
-        <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
-        <a href="#">Read More →</a>
-      </div>
- 
-    </aside>
- 
-    <!-- End Sidebar -->
-  </div>
- 
-  <!-- End Main Content and Sidebar -->
- 
- 
+
   <!-- Footer -->
  
   <footer class="row">
@@ -100,14 +72,13 @@
       <hr />
       <div class="row">
         <div class="large-6 columns">
-          <p>© Copyright no one at all. Go to town.</p>
+          <p>© Copyright Tom Standifer.</p>
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>
+            <li><a href="#">Photography</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">Archive</a></li>
           </ul>
         </div>
       </div>
