--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
  <div class="row">
  	<div class="large-12 columns">
  		<h1><small>“I think the idea is that every person has to live for his or her own life and then make the choice to share it with other people. You can't just sit there and put everybody's lives ahead of yours and think that counts as love.” </small></h1>
+ 	<div align="right">
+ 		-Stephen Chbosky
+ 	</div>
  	</div>
  </div>
 
