--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
     </head>
     <body>
       <!-- Nav Bar -->
- 
-<nav class="top-bar" data-topbar>
-  <ul class="title-area">
-    <li class="name">
-      <h1><a href="#">Blogging life.</a></h1>
-    </li>
-     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-  </ul>
-
-  <section class="top-bar-section">
-    <!-- Right Nav Section -->
-    <ul class="right">
-    	<li><a href="#">Photography</a></li>
-    	<li><a href="#">Resume</a></li>
-    	<li><a href="#">Archive</a></li>
-    </ul>
-
-    <!-- Left Nav Section -->
-    <ul class="left">
-      <li></li>
-    </ul>
-  </section>
-</nav>
- 
+<div class="contain-to-grid fixed">
+	<nav class="top-bar" data-topbar>
+	  <ul class="title-area">
+	    <li class="name">
+	      <h1><a href="#">Blogging life.</a></h1>
+	    </li>
+	     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+	    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+	  </ul>
+	
+	  <section class="top-bar-section">
+	    <!-- Right Nav Section -->
+	    <ul class="right">
+	    	<li><a href="#">Photography</a></li>
+	    	<li><a href="#">Resume</a></li>
+	    	<li><a href="#">Archive</a></li>
+	    </ul>
+	
+	    <!-- Left Nav Section -->
+	    <ul class="left">
+	      <li></li>
+	    </ul>
+	  </section>
+	</nav>
+</div>
   <!-- End Nav -->
 
   <!-- Main Page Content and Sidebar -->
