--- a/index.html
+++ b/index.html
@@ -11,23 +11,22 @@
 
     </head>
     <body>
+    	<div class="toppagepadding">
       <!-- Nav Bar -->
 <div class="contain-to-grid fixed">
 	<nav class="top-bar" data-topbar>
 	  <ul class="title-area">
 	    <li class="name">
-	      <h1><a href="#">Blogging life.</a></h1>
+	      <h1><a href="#"><b>t</b>om<b>s</b>tandifer.com</a></h1>
 	    </li>
 	     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-	    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+	    <li class="toggle-topbar icon"><a href="#"><span>Menu</span></a></li>
 	  </ul>
 	
 	  <section class="top-bar-section">
 	    <!-- Right Nav Section -->
 	    <ul class="right">
-	    	<li><a href="#">Photography</a></li>
-	    	<li><a href="#">Resume</a></li>
-	    	<li><a href="#">Archive</a></li>
+	    	<li><a href="#">DANGER</a></li>
 	    </ul>
 	
 	    <!-- Left Nav Section -->
@@ -40,7 +39,6 @@
   <!-- End Nav -->
 
   <!-- Main Page Content and Sidebar -->
- 
  <div class="row">
  	<div class="large-12 columns">
  		<h1><small>“I think the idea is that every person has to live for his or her own life and then make the choice to share it with other people. You can't just sit there and put everybody's lives ahead of yours and think that counts as love.” </small></h1>
@@ -87,5 +85,6 @@
       </div>
     </div>
   </footer>
+      	</div>
     </body>
 </html>
